# safetykit-onsite

./: LICENSE  README.md
api/: .dockerignore  Dockerfile  README.md  analyze.py  compose.yaml  db.py  llmtest.py  main.py  manage.py  pathtest.py  pyproject.toml  scrape.py  search.py
api/data/: models.py
api/data/migrations/: 0001_initial.py  0002_policyviolation.py  0003_policyviolation_uses_visa.py  0004_policyviolation_screenshots.py
api/graph/: asgi.py  settings.py  urls.py  wsgi.py
api/integrations/: base.py  inspired.py  types.py  wikipedia.py
api/wikipedia_api/: client.py
deploy/: README.md  compose.yaml
deploy/conf.d/: default.conf
deploy/nginx/: Dockerfile
frontend/: README.md  next.config.ts  openapi-ts.config.ts  package.json  pnpm-lock.yaml
frontend/api-codegen/client/: index.ts  sdk.gen.ts  types.gen.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/common/: EdgeSidebar.tsx  Map.tsx  SearchBar.tsx
